--- a/package.json
+++ b/package.json
@@ -9,8 +9,32 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.39.8",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@nuxt/devtools": "latest",
-    "@types/node": "^18.17.0",
-    "nuxt": "^3.6.5"
+    "@nuxtjs/color-mode": "^3.3.0",
+    "@nuxtjs/device": "^3.1.0",
+    "@nuxtjs/i18n": "8.0.0-beta.13",
+    "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
+    "@pinia/nuxt": "^0.4.11",
+    "@prisma/client": "^5.0.0",
+    "@sidebase/nuxt-auth": "0.6.0-beta.3",
+    "@types/node": "^20.4.5",
+    "@unocss/eslint-config": "^0.53.6",
+    "@unocss/nuxt": "^0.53.6",
+    "@unocss/preset-uno": "^0.53.6",
+    "@unocss/reset": "^0.53.6",
+    "@vant/nuxt": "^1.0.2",
+    "@vant/touch-emulator": "^1.4.0",
+    "@vueuse/core": "^10.2.1",
+    "@vueuse/nuxt": "^10.2.1",
+    "nuxt": "^3.6.5",
+    "nuxt-icon": "^0.4.2",
+    "nuxt-seo-kit": "^1.3.9",
+    "nuxt-typed-router": "^3.2.5",
+    "pinia": "^2.1.6",
+    "prisma": "^5.0.0",
+    "sass": "^1.64.1",
+    "sass-loader": "^13.3.2"
   }
 }
