--- a/package.json
+++ b/package.json
@@ -1,40 +1,52 @@
 {
   "name": "nuxt-app",
+  "type": "module",
   "private": true,
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare && simple-git-hooks",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.39.8",
+    "@antfu/eslint-config": "1.0.0-beta.28",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@nuxt/devtools": "latest",
+    "@nuxt/devtools": "^1.0.0",
     "@nuxtjs/color-mode": "^3.3.0",
-    "@nuxtjs/device": "^3.1.0",
-    "@nuxtjs/i18n": "8.0.0-beta.13",
-    "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
-    "@pinia/nuxt": "^0.4.11",
-    "@prisma/client": "^5.0.0",
-    "@sidebase/nuxt-auth": "0.6.0-beta.3",
-    "@types/node": "^20.4.5",
-    "@unocss/eslint-config": "^0.53.6",
-    "@unocss/nuxt": "^0.53.6",
-    "@unocss/preset-uno": "^0.53.6",
-    "@unocss/reset": "^0.53.6",
-    "@vant/nuxt": "^1.0.2",
+    "@nuxtjs/device": "^3.1.1",
+    "@nuxtjs/i18n": "8.0.0-rc.5",
+    "@nuxtseo/module": "2.0.0-beta.39",
+    "@pinia-plugin-persistedstate/nuxt": "^1.1.2",
+    "@pinia/nuxt": "^0.4.4",
+    "@prisma/client": "^5.4.2",
+    "@sidebase/nuxt-auth": "0.6.0-rc.0",
+    "@types/node": "^20.8.7",
+    "@unocss/eslint-config": "^0.57.0",
+    "@unocss/nuxt": "^0.57.0",
+    "@unocss/preset-uno": "^0.57.0",
+    "@unocss/reset": "^0.57.0",
+    "@vant/nuxt": "^1.0.3",
     "@vant/touch-emulator": "^1.4.0",
-    "@vueuse/core": "^10.2.1",
-    "@vueuse/nuxt": "^10.2.1",
-    "nuxt": "^3.6.5",
-    "nuxt-icon": "^0.4.2",
-    "nuxt-seo-kit": "^1.3.9",
-    "nuxt-typed-router": "^3.2.5",
-    "pinia": "^2.1.6",
-    "prisma": "^5.0.0",
-    "sass": "^1.64.1",
-    "sass-loader": "^13.3.2"
+    "@vueuse/core": "^10.5.0",
+    "@vueuse/nuxt": "^10.5.0",
+    "eslint": "^8.52.0",
+    "lint-staged": "^15.0.2",
+    "nuxt": "^3.8.0",
+    "nuxt-icon": "^0.5.0",
+    "nuxt-typed-router": "^3.3.2",
+    "pinia": "^2.1.7",
+    "prisma": "^5.4.2",
+    "sass": "^1.69.4",
+    "sass-loader": "^13.3.2",
+    "simple-git-hooks": "^2.9.0"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm lint-staged"
+  },
+  "lint-staged": {
+    "*": "eslint --fix"
   }
 }
